@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2754 2005/04/20 01:28:25 suz Exp $
+$KAME: CHANGELOG,v 1.2755 2005/04/23 07:13:52 suz Exp $
 
 <200504>
+2005-04-23  SUZUKI, Shinsuke <suz@kame.net>
+	* kame/sys/netinet6/in6_rmx.c, in6_ifattach.c: fixed a kernel crash
+	by a lock-order-reversal in freebsd5
+
 2005-04-20  SUZUKI, Shinsuke <suz@kame.net>
 	* freebsd5/sys/net/if.c: FreeBSD Security Advisory
 	 FreeBSD-SA-05:04.ifconf
